# Atoms

./: .gitignore  compile_commands.json  elements.json  meson.build
src/: main.cpp  meson.build
src/element/: element.cpp  element.h  meson.build
src/my_camera/: meson.build  my_camera.cpp  my_camera.h
